<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/item_image_view"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
            <LinearLayout
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item_description_text_view"
                    android:layout_width="match_parent"
                    android:text="@string/description"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item_email_text_view"
                    android:layout_width="match_parent"
                    android:text="@string/email"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/item_rating_text_view"
                    android:layout_width="match_parent"
                    android:text="@string/rating"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>